set library location

--- a/nodes/playground/playground.html
+++ b/nodes/playground/playground.html
@@ -237,7 +237,7 @@ public class Snippet extends SuperGluev2 {
             });
             
             RED.library.create({
-                url:"functions", // where to get the data from
+                url:"functions/playground", // where to get the data from
                 type:"function", // the type of object the library is for
                 editor:this.editor, // the field name the main text body goes to
                 mode:"ace/mode/javascript",
