--- a/nodes/playground/java/java.html
+++ b/nodes/playground/java/java.html
@@ -197,7 +197,7 @@ public class Snippet extends SuperGluev2 {
             	this.editor.setValue($("#playground-default .java").text());
             
             RED.library.create({
-                url:"functions", // where to get the data from
+                url:"functions/playground/java", // where to get the data from
                 type:"function", // the type of object the library is for
                 editor:this.editor, // the field name the main text body goes to
                 mode:"ace/mode/javascript",
