--- a/nodes/playground/playground.html
+++ b/nodes/playground/playground.html
@@ -241,7 +241,7 @@ public class Snippet extends SuperGluev2 {
                 type:"function", // the type of object the library is for
                 editor:this.editor, // the field name the main text body goes to
                 mode:"ace/mode/javascript",
-                fields:['name','outputs']
+                fields:['name','url','mode','jar','imports','params','outputs']
             });
             this.editor.focus();
 
