--- a/nodes/playground/node/node.html
+++ b/nodes/playground/node/node.html
@@ -169,7 +169,7 @@ function process(parameters, callback) { // DO NOT REMOVE THIS LINE
                 type:"function", // the type of object the library is for
                 editor:this.editor, // the field name the main text body goes to
                 mode:"ace/mode/javascript",
-                fields:['name','outputs']
+                fields:['name','url','params','outputs']
             });
             this.editor.focus();
 
