added library fields

--- a/nodes/playground/java/java.html
+++ b/nodes/playground/java/java.html
@@ -200,8 +200,8 @@ public class Snippet extends SuperGluev2 {
                 url:"functions/playground/java", // where to get the data from
                 type:"function", // the type of object the library is for
                 editor:this.editor, // the field name the main text body goes to
-                mode:"ace/mode/javascript",
-                fields:['name','outputs']
+                mode:"ace/mode/java",
+                fields:['name','url','jar','imports','params','outputs']
             });
             this.editor.focus();
 
